# Rusty-Vault

./: README.md
RustyVault/: Cargo.toml  crackme.exe.id0  crackme.exe.id1  crackme.exe.id2  crackme.exe.nam  crackme_packed.exe.id0  crackme_packed.exe.id1  crackme_packed.exe.id2  crackme_packed.exe.nam  crackme_packed.exe.til
RustyVault/builder/: CQUOI.txt  Cargo.toml
RustyVault/builder/src/: builder.rs  constants.rs  cypher.rs  detector.rs  main.rs  packer.rs
RustyVault/stub/: CQUOI.txt  Cargo.toml
RustyVault/stub/src/: config.rs  cypher.rs  inject_remote_dll.rs  is_being_debugged.rs  linux_mem_exec.rs  main.rs  mod.rs  payload.rs  resolve_rva.rs  run_pe.rs  utils.rs
RustyVault/stub/src/anti_debug/: .assembly.rs.swp  assembly.rs  debugger.rs  exceptions.rs  handles.rs  memory.rs  misc.rs  mod.rs  timing.rs
RustyVault/stub/src/loader/: .linux.rs.swp  linux.rs  mod.rs
RustyVault/stub/src/loader/windows/: iat.rs  mod.rs  pe.rs  process.rs
RustyVault/stub/src/security/: assembly.rs  exceptions.rs  interactive.rs  mod.rs
exemples/: README.md
exemples/RustyVault/stub/: CQUOI.txt
exemples/RustyVault/stub/src/: get_time_cycles.rs  linux_mem_exec.rs
