[workspace]
members = [
    "builder",
    "stub"
]

# Optimisations agressives pour réduire la taille du stub final
[profile.release]
opt-level = "z"     # Optimiser pour la taille (Size)
lto = true          # Link Time Optimization (fusionne mieux le code)
codegen-units = 1   # Compile plus lentement mais binaire plus petit
panic = "abort"     # Retire le code de gestion d'erreur (plus léger)
strip = true        # Retire les symboles de debug (indispensable pour un malware/packer)
