cargo-features = ["edition2024"]

[package]
name = "builder"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.183"


[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winuser", "sysinfoapi", "errhandlingapi", "memoryapi", 
    "processthreadsapi", "synchapi", "winbase", "winnt", 
    "handleapi", "libloaderapi", "basetsd", "debugapi", "tlhelp32"
]}