[package]
name = "stub"
version = "0.1.0"
edition = "2024"

[dependencies]
obfstr = "0.4"
goldberg = "0.1" 

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winuser", "sysinfoapi", "errhandlingapi", "memoryapi", 
    "processthreadsapi", "synchapi", "winbase", "winnt", 
    "handleapi", "libloaderapi", "basetsd", "debugapi", "tlhelp32"
]}
windows-sys = { version = "0.52", features = [
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"



