cargo-features = ["edition2024"]

[package]
name = "stub"
version = "0.1.0"
edition = "2021"

[dependencies]
obfstr = "0.4"
goldberg = "0.1" 
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winuser", "sysinfoapi", "errhandlingapi", "memoryapi", 
    "processthreadsapi", "synchapi", "winbase", "winnt", 
    "handleapi", "libloaderapi", "basetsd", "debugapi", "tlhelp32"
]}

[dependencies.windows-sys]
version = "0.61.2" # or your current version
features = [
    "Win32",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_System_Threading",
	"Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Kernel"
]
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"


